--- a/TestProject.Infrastructure/TestProject.Infrastructure.csproj
+++ b/TestProject.Infrastructure/TestProject.Infrastructure.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TestProject.Application\TestProject.Application.csproj" />
+    <ProjectReference Include="..\TestProject.Domain\TestProject.Domain.csproj" />
   </ItemGroup>
 
 </Project>
